# Multimodal_BiasEvaluation

./: .gitignore  Image-To-Text.py  PACKAGING.md  README.md  Text-To-Image.py  __init__.py  i2t.py  image_to_text.py  main.py  model_config.py  prompts_config.py  pyproject.toml  requirements.txt  setup.py  t2i.py  text_to_image.py
evaluationFunctions/: eval_func.py  evaluation_functions.py  gender_config.py  visualization.py  word_config.py
