[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-bias-evaluation"
version = "1.0.0"
description = "A comprehensive toolkit for evaluating bias in multimodal AI systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "[Your Name]", email = "[your.email@example.com]"}
]
maintainers = [
    {name = "[Your Name]", email = "[your.email@example.com]"}
]
keywords = ["bias evaluation", "multimodal", "AI", "text-to-image", "image-to-text", "fairness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "transformers>=4.20.0",
    "diffusers>=0.10.0",
    "accelerate>=0.12.0",
    "Pillow>=8.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "opencv-python>=4.5.0",
    "requests>=2.25.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/[your-username]/Multimodal_BiasEvaluation"
Documentation = "https://github.com/[your-username]/Multimodal_BiasEvaluation#readme"
Repository = "https://github.com/[your-username]/Multimodal_BiasEvaluation"
"Bug Tracker" = "https://github.com/[your-username]/Multimodal_BiasEvaluation/issues"

[project.scripts]
multimodal-bias-eval = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 